# seroup

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  readme.md  run.py  tsconfig.json
.github/workflows/: publish.yml  release.yml
cli/: commands.ts  config.ts  error.ts  log.ts  run.ts
cli/sero-api/: api.ts  base.ts  common.ts  configuration.ts  index.ts
seroup/: run.py
seroup/commands/: base.py  disable.py  download.py  enable.py  init.py  registration.py  teardown.py  ucors.py  upload.py
seroup/configuration/: config.py
